[tool.poetry]
name = "ant_nest"
version = "1.0.1"
description = "A simple and clear Web Crawler framework build on python3.6+"
readme = "README.rst"
repository = "https://github.com/strongbugman/ant_nest"
authors = ["strongbugman <strongbugman@gmail.com>"]
license = "LGPL"
classifiers=[
    "Environment :: Console",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "ant_nest" },
]
[tool.poetry.scripts]
ant_nest = "ant_nest.cli:main"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
httpx = ">=0.14.0"
tenacity = ">=4.8.0"
ujson = ">=1.3.4"
aiofiles = ">=0.3.1"
typing_extensions = ">=3.6"
IPython = ">=7.0"
oxalis = ">=0.4.0"

[tool.poetry.dev-dependencies]
pytest = ">=3.3.1"
pytest-asyncio = ">=0.8.0"
pytest-cov = ">=2.5.1"
pytest-mock = ">=2.0.0"
jpath = ">=1.6"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
codecov = "^2.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
